--- a/RReplay/View/ReplayView.xaml
+++ b/RReplay/View/ReplayView.xaml
@@ -12,7 +12,7 @@
         <DataTemplate x:Key="PlayerTemplate" >
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Width="600" Margin="5,0,0,0" Padding="5">
                 <StackPanel Orientation="Vertical">
-                    <StackPanel Orientation="Horizontal">
+                    <DockPanel >
                         <Label FontSize="14" >Name :</Label>
                         <TextBlock FontWeight="Bold" Text="{Binding PlayerName, Mode=OneWay}" ToolTip="{Binding PlayerName, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" />
                         <Label FontSize      ="14">ID :</Label>
@@ -23,18 +23,19 @@
                         <TextBlock Text="{Binding PlayerRank, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
                         <Label FontSize      ="14">ELO:</Label>
                         <TextBlock Text="{Binding PlayerElo, Mode=OneWay, StringFormat=\{0:F0\}}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
+                        <Button Command="{Binding Main.OpenSteamCommunityPageCommand , Source={StaticResource Locator}}" CommandParameter="{Binding SteamID}" ToolTip="Open the Steam Community Page" HorizontalAlignment="Right">Steam
+                        </Button>
+                    </DockPanel>
+                    <DockPanel>
                         <Label FontSize="14" >Deck :</Label>
                         <TextBlock FontWeight="Bold" FontSize="14.667" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                    </DockPanel>
 
-                    </StackPanel>
-
-                    <StackPanel Orientation="Horizontal">
+                    <DockPanel>
                         <Label FontSize="14" >Code :</Label>
                         <TextBlock Width="450"  ToolTip="{Binding PlayerDeckContent, Mode=OneWay}" Text="{Binding PlayerDeckContent, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Center" ClipToBounds="False"/>
-                        <Button Width="75" Margin="5" HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding Main.CopyDeckCodeCommand , Source={StaticResource Locator}}" CommandParameter="{Binding PlayerDeckContent}">Copy Code</Button>
-                    </StackPanel>
+                        <Button Width="75"  HorizontalAlignment="Right" VerticalAlignment="Center" Command="{Binding Main.CopyDeckCodeCommand , Source={StaticResource Locator}}" CommandParameter="{Binding PlayerDeckContent}" >Copy Code</Button>
+                    </DockPanel>
 
                 </StackPanel>
             </Border>
@@ -50,9 +51,17 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" FontSize="16">Team 1</Label>
+        <DockPanel Grid.Row="0">
+            <Label  FontSize="16">Team 1</Label>
+            <TextBox  DockPanel.Dock="Right" Text="{Binding FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
+            <Label  FontSize="16" HorizontalAlignment="Right">Players count : </Label>
+        </DockPanel>
         <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding FirstTeamPlayers}"/>
-        <Label Grid.Row="2" FontSize="16">Team 2</Label>
+        <DockPanel Grid.Row="2" >
+            <Label  FontSize="16">Team 2</Label>
+            <TextBox  Text="{Binding SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
+            <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
+        </DockPanel>
         <ListBox Grid.Row="3" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SecondTeamPlayers}"/>
     </Grid>
 </UserControl>
