--- a/RReplay/App.xaml
+++ b/RReplay/App.xaml
@@ -5,8 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:ignore="http://www.galasoft.ch/ignore"
-             StartupUri="MainWindow.xaml"
+            Startup="Application_Startup"    
+             ShutdownMode="OnMainWindowClose"
              mc:Ignorable="d ignore">
+             <!--StartupUri="MainWindow.xaml"-->
+
 
     <Application.Resources>
         <!--Global View Model Locator-->
