--- a/RReplay/MainWindow.xaml
+++ b/RReplay/MainWindow.xaml
@@ -37,12 +37,15 @@
             <RowDefinition MinHeight="350"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="660"></ColumnDefinition>
+            <ColumnDefinition MinWidth="660"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <views:ReplaysListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Height="Auto" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
-        <GridSplitter Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+        <views:ReplaysListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Height="Auto" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
+        <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
         <views:ReplayView Grid.Column="0" Grid.Row="2" Width="Auto" Margin="0,0,0,0" />
-        <views:DetailReplayView Grid.Column="1" Grid.Row="2" Width="Auto" Margin="0,0,0,0" />
+        <GridSplitter Grid.Column="1" Grid.Row="2" Background="Black" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
+        <views:DetailReplayView Grid.Column="2" Grid.Row="2" Width="Auto" Margin="0,0,0,0" />
+        
     </Grid>
 </Window>
