--- a/RReplay/View/ReplayView.xaml
+++ b/RReplay/View/ReplayView.xaml
@@ -46,25 +46,90 @@
     </UserControl.Resources>
 
 
-    <Grid Margin="10,10,10,10">
+    <Grid x:Name="grid" Margin="10,10,10,10" SizeChanged="grid_SizeChanged">
+        <VisualStateManager.VisualStateGroups >
+            <VisualStateGroup x:Name="VisualStateGroup">
+
+                <VisualState x:Name="_highWidth" >
+                    <Storyboard  >
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.Row)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="0"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.Column)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.RowSpan)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="2"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.ColumnSpan)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.ColumnSpan)" Storyboard.TargetName="gridTeam1">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.RowSpan)" Storyboard.TargetName="gridTeam1">
+                            <EasingInt32KeyFrame KeyTime="0" Value="2"/>
+                        </Int32AnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="_lowWidth" >
+                    <Storyboard  >
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.Row)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.Column)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="0"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.RowSpan)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.ColumnSpan)" Storyboard.TargetName="gridTeam2">
+                            <EasingInt32KeyFrame KeyTime="0" Value="2"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.ColumnSpan)" Storyboard.TargetName="gridTeam1">
+                            <EasingInt32KeyFrame KeyTime="0" Value="2"/>
+                        </Int32AnimationUsingKeyFrames>
+                        <Int32AnimationUsingKeyFrames Storyboard.TargetProperty="(Grid.RowSpan)" Storyboard.TargetName="gridTeam1">
+                            <EasingInt32KeyFrame KeyTime="0" Value="1"/>
+                        </Int32AnimationUsingKeyFrames>
+                    </Storyboard>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="31.28"></RowDefinition>
             <RowDefinition></RowDefinition>
-            <RowDefinition Height="31.28"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-        <DockPanel Grid.Row="0">
-            <Label  FontSize="16">Team 1</Label>
-            <TextBox  DockPanel.Dock="Right" Text="{Binding FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
-            <Label  FontSize="16" HorizontalAlignment="Right">Players count : </Label>
-        </DockPanel>
-        <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding FirstTeamPlayers}"/>
-        <DockPanel Grid.Row="2" >
-            <Label  FontSize="16">Team 2</Label>
-            <TextBox  Text="{Binding SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
-            <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
-        </DockPanel>
-        <ListBox Grid.Row="3" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SecondTeamPlayers}"/>
+        <Grid x:Name="gridTeam1" Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="31.28"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <DockPanel Grid.Row="0">
+                <Label  FontSize="16">Team 1</Label>
+                <TextBox  DockPanel.Dock="Right" Text="{Binding FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
+                <Label  FontSize="16" HorizontalAlignment="Right">Players count :</Label>
+            </DockPanel>
+            <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding FirstTeamPlayers}"/>
+        </Grid>
+
+        <Grid x:Name="gridTeam2" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="31.28"></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <DockPanel Grid.Row="0">
+                <Label  FontSize="16">Team 2</Label>
+                <TextBox  Text="{Binding SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
+                <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
+            </DockPanel>
+            <ListBox Grid.Row="1" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SecondTeamPlayers}"/>
+        </Grid>
     </Grid>
 </UserControl>
