--- a/RReplay/View/ReplaysListView.xaml
+++ b/RReplay/View/ReplaysListView.xaml
@@ -32,6 +32,11 @@
                            <Image Source="/RReplay;component/Ressources/FolderOpen.ico"></Image>
                         </MenuItem.Icon>
                     </MenuItem>
+                    <MenuItem Header="Refresh" Command="{Binding RefreshReplay}" >
+                        <MenuItem.Icon>
+                            <Image Source="/RReplay;component/Ressources/ItemUpdatedAssociation_16x.png"></Image>
+                        </MenuItem.Icon>
+                    </MenuItem>
                     <MenuItem Header="Save JSON..." IsEnabled="False" />
                 </ContextMenu>
             </DataGrid.ContextMenu> 
