--- a/RReplay/MainWindow.xaml
+++ b/RReplay/MainWindow.xaml
@@ -37,7 +37,7 @@
             <RowDefinition MinHeight="350"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="660"></ColumnDefinition>
+            <ColumnDefinition MinWidth="660"  MaxWidth="1350"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
