Addes filter by PlayerName

--- a/RReplay/View/ReplayView.xaml
+++ b/RReplay/View/ReplayView.xaml
@@ -6,7 +6,7 @@
         xmlns:ignore="http://www.galasoft.ch/ignore"
         mc:Ignorable="d ignore"
         MinHeight="340"
-        DataContext="{Binding Main.SelectedReplay, Source={StaticResource Locator}}" >
+        DataContext="{Binding Main, Source={StaticResource Locator}}" >
 
     <UserControl.Resources>
         <DataTemplate x:Key="PlayerTemplate" >
@@ -113,10 +113,10 @@
             </Grid.RowDefinitions>
             <DockPanel Grid.Row="0">
                 <Label  FontSize="16">Team 1</Label>
-                <TextBox  DockPanel.Dock="Right" Text="{Binding FirstTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
+                <TextBox  DockPanel.Dock="Right" Text="{Binding SelectedPlayerTeam1View.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" Margin="0,0,5,0"/>
                 <Label  FontSize="16" HorizontalAlignment="Right">Players count :</Label>
             </DockPanel>
-            <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding FirstTeamPlayers}"/>
+            <ListBox Grid.Row="1" x:Name="firstTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SelectedPlayerTeam1View}"/>
         </Grid>
 
         <Grid x:Name="gridTeam2" Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2" Width="640" HorizontalAlignment="Left">
@@ -126,10 +126,10 @@
             </Grid.RowDefinitions>
             <DockPanel Grid.Row="0">
                 <Label  FontSize="16">Team 2</Label>
-                <TextBox  Text="{Binding SecondTeamPlayers.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
+                <TextBox  Text="{Binding SelectedPlayerTeam2View.Count, Mode=OneWay}" IsReadOnly="True" VerticalContentAlignment="Center" HorizontalAlignment="Right" BorderThickness="0" DockPanel.Dock="Right" Margin="0,0,5,0"/>
                 <Label  FontSize="16" HorizontalAlignment="Right"  DockPanel.Dock="Right">Players count :</Label>
             </DockPanel>
-            <ListBox Grid.Row="1" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SecondTeamPlayers}"/>
+            <ListBox Grid.Row="1" x:Name="secondTeamListBox" MinHeight="129.22" ItemTemplate="{DynamicResource PlayerTemplate}" ItemsSource="{Binding SelectedPlayerTeam2View}"/>
         </Grid>
     </Grid>
 </UserControl>
