--- a/RReplay/MainWindow.xaml
+++ b/RReplay/MainWindow.xaml
@@ -32,6 +32,7 @@
 
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
+            <RowDefinition Height="25"></RowDefinition>
             <RowDefinition MinHeight="150"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition MinHeight="350"></RowDefinition>
@@ -41,11 +42,14 @@
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <views:ReplaysListView Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Height="Auto" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
-        <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
-        <views:ReplayView Grid.Column="0" Grid.Row="2" Width="Auto" Margin="0,0,0,0" />
-        <GridSplitter Grid.Column="1" Grid.Row="2" Background="Black" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
-        <views:DetailReplayView Grid.Column="2" Grid.Row="2" Width="Auto" Margin="0,0,0,0" />
+        <StackPanel>
+            <TextBox Text="{Binding NameFilter, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+        </StackPanel>
+        <views:ReplaysListView Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Height="Auto" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
+        <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
+        <views:ReplayView Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" />
+        <GridSplitter Grid.Column="1" Grid.Row="3" Background="Black" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
+        <views:DetailReplayView Grid.Column="2" Grid.Row="3" Width="Auto" Margin="0,0,0,0" />
         
     </Grid>
 </Window>
