--- a/RReplay/View/ReplaysListView.xaml
+++ b/RReplay/View/ReplaysListView.xaml
@@ -27,7 +27,7 @@
                             <Image Source="/RReplay;component/Ressources/JSONDocumentOutline_16x.png"></Image>
                         </MenuItem.Icon>
                     </MenuItem>
-                    <MenuItem Header="Browse To" Command="{Binding BrowseToReplayFileCommand}" CommandParameter="{Binding SelectedReplay.CompletePath}">
+                    <MenuItem Header="Browse To" Command="{Binding BrowseToReplayFileCommand}">
                         <MenuItem.Icon>
                            <Image Source="/RReplay;component/Ressources/FolderOpen.ico"></Image>
                         </MenuItem.Icon>
