--- a/RReplay/MainWindow.xaml
+++ b/RReplay/MainWindow.xaml
@@ -18,6 +18,7 @@
 
     <Window.Resources>
         <ResourceDictionary>
+            <BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Skins/MainSkin.xaml" />
             </ResourceDictionary.MergedDictionaries>
@@ -42,12 +43,14 @@
             <ColumnDefinition Width="Auto"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <StackPanel>
-            <TextBox Text="{Binding NameFilter, UpdateSourceTrigger=PropertyChanged}" ></TextBox>
+        <StackPanel  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Orientation="Horizontal">
+            <Label>Player name :</Label>
+            <TextBox Text="{Binding NameFilter, UpdateSourceTrigger=PropertyChanged}" Width="125" ></TextBox>
         </StackPanel>
         <views:ReplaysListView Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="3" Height="Auto" Width="Auto" Margin="0,0,0,0" d:LayoutOverrides="LeftMargin, RightMargin, TopMargin, BottomMargin"/>
         <GridSplitter Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="5" Background="Black" ShowsPreview="True" VerticalAlignment="Center" HorizontalAlignment="Stretch"/>
-        <views:ReplayView Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" />
+        <views:ReplayView Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" Visibility="{Binding Path=ReplayViewVisible, Converter={StaticResource BoolToVisConverter} }" />
+        <views:AllPlayersDeck Grid.Column="0" Grid.Row="3" Width="Auto" Margin="0,0,0,0" Visibility="{Binding Path=AllPlayersDeckVisible, Converter={StaticResource BoolToVisConverter} }"/>
         <GridSplitter Grid.Column="1" Grid.Row="3" Background="Black" Width="5" ShowsPreview="True" VerticalAlignment="Stretch" HorizontalAlignment="Center"/>
         <views:DetailReplayView Grid.Column="2" Grid.Row="3" Width="Auto" Margin="0,0,0,0" />
         
