--- a/RReplay/Skins/MainSkin.xaml
+++ b/RReplay/Skins/MainSkin.xaml
@@ -22,8 +22,11 @@
                 <DockPanel>
                     <Label FontSize="14" >Deck :</Label>
                     <TextBlock FontWeight="Bold" FontSize="14.667" ToolTip="{Binding PlayerDeckName, Mode=OneWay}" Text="{Binding PlayerDeckName, Mode=OneWay}" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                    <Label FontSize="14" >Nation:</Label>
                     <TextBlock Text="{Binding Deck.Country, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                    <Label FontSize="14" >Era:</Label>
                     <TextBlock Text="{Binding Deck.Era, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                    <Label FontSize="14" >Type:</Label>
                     <TextBlock Text="{Binding Deck.Specialization, Mode=OneWay}" FontSize="14.667" HorizontalAlignment="Left" VerticalAlignment="Center" />
                 </DockPanel>
 
